Changed styling of solver panel button. Refactored Solver panel for better code readability. Added feature to solver to find all candidates in a puzzle

--- a/src/global.scss
+++ b/src/global.scss
@@ -201,6 +201,21 @@ main {
 	}
 }
 
+.panel-button {
+	background-color: #3c3c3c;
+	border: 1px solid #515151;
+	border-radius: 0.2rem;
+	height: 2rem;
+	cursor: pointer;
+
+	margin-top: 0.3rem;
+	margin-bottom: 0.3rem;
+
+	&:hover {
+		background-color: #515151;
+	}
+}
+
 .settings-tab-layout {
 	display: flex;
 	flex-direction: column;
